examples/test/testpolicy5645.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5645
  namespace: namespace312
spec:
  podSelector:
    matchLabels:
      key14: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value48
          key22: value0
          key42: value27
      podSelector:
        matchLabels:
          key47: value44
          key41: value36
